--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>Minh Vu's Website</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.bundle.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Minh Vu's Website</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,7 +28,22 @@
         </div>
     </div>
 </nav>
-
-
+<main class="container bg-primary">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary">
+        <div class="col-md-3 px-4 gx-3">
+            <h1 class="display-1 fst-italic">
+            Placeholder H1
+            </h1>
+            <h2 class="display-6">
+                Header 2
+            </h2>
+        </div>
+    </div>
+</main>
+<div class="container-fluid bg-dark text-white">
+    <footer class="py-3 my-4">
+        <p class="text-center text-white">Made by Minh Vu</p>
+    </footer>
+</div>
 </body>
 </html>
