--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title>Page 2</title>
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Navbar</a>
+    <a class="navbar-brand" href="index.html">Minh Vu's Website</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +19,7 @@
           <a class="nav-link " aria-current="false" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="page2.html" aria-current="true">Link 1</a>
+          <a class="nav-link active"  href="page2.html" aria-current="true">Link 1</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href=""> Link 2</a>
@@ -28,5 +28,14 @@
     </div>
   </div>
 </nav>
+<main>
+
+</main>
+<div class="container-fluid bg-dark text-white">
+  <footer class="py-3 my-4">
+    <p class="text-center ">Made by Minh Vu</p>
+  </footer>
+</div>
+
 </body>
 </html>
