--- a/index.html
+++ b/index.html
@@ -2,48 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minh Vu's Website</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/bootstrap.bundle.js"></script>
+    <title>Landing</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Minh Vu's Website</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="page2.html" aria-current="false">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href=""> Link 2</a>
-                </li>
-            </ul>
+<header>
+    <!-- Logo -->
+    <img src="logos/Minh's%20Bookstore-logos_white_cropped.png" class="logo" alt="logo">
+    <!-- Hamburger icon -->
+    <input class="side-menu" type="checkbox" id="side-menu"/>
+    <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    <!-- Menu -->
+    <nav class="nav">
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="categories/category1.html">Category 1</a> </li>
+            <li><a href="categories/category2.html">Category 2</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <div class="category-box">
+        <div class="box-title">
+            <h1><a href="categories/category1.html">Category 1</a></h1>
+        </div>
+    <div class="grid-container">
+            <div class="book-in-grid">
+                <div class="box-title">
+                    <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 1</a>
+            </div>
+            </div>
+            <div class="book-in-grid">
+                <div class="box-title">
+                    <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 2</a>
+                </div>
+            </div>
+            <div class="book-in-grid">
+                <div class="box-title">
+                    <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 3</a>
+                </div>
+            </div>
+    </div>
+    </div>
+    <div class="category-box">
+    <div class="box-title">
+        <h1><a href="#">Category 2</a></h1>
+    </div>
+    <div class="grid-container">
+        <div class="book-in-grid">
+            <div class="box-title">
+                <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 1</a>
+            </div>
+        </div>
+        <div class="book-in-grid">
+            <div class="box-title">
+                <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 2</a>
+            </div>
+        </div>
+        <div class="book-in-grid">
+            <div class="box-title">
+                <a href="Book.html"><img class="book-image" src="logos/Book.svg" >Crazy Book 3</a>
+            </div>
         </div>
     </div>
-</nav>
-<main class="container bg-primary">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary">
-        <div class="col-md-3 px-4 gx-3">
-            <h1 class="display-1 fst-italic">
-            Placeholder H1
-            </h1>
-            <h2 class="display-6">
-                Header 2
-            </h2>
-        </div>
     </div>
 </main>
-<div class="container-fluid bg-dark text-white">
-    <footer class="py-3 my-4">
-        <p class="text-center text-white">Made by Minh Vu</p>
-    </footer>
-</div>
+<footer>
+    <nav>
+        <ul class="footer">
+            <li class="footer-item"><a href="#">About Us</a></li>
+            <li class="footer-item"><a href="#">Privacy Policy</a> </li>
+            <li class="footer-item"><a href="#">Terms</a></li>
+            <li class="footer-item"><a href="#">Copyright</a></li>
+            <li class="footer-item"><a href="Contact%20Us.html">Contact Us</a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
